--- a/public/stylesheets/user_profile.css
+++ b/public/stylesheets/user_profile.css
@@ -4,16 +4,54 @@ body {
 
 * {
     font-family: Consolas !important;
+    text-decoration: none !important;
 }
 
 body i {
     font-family: 'FontAwesome' !important;
 }
 
+.fa-arrow-left {
+    font-style: normal;
+    font-size: 30px;
+    color: #ff9900;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    /* remove scrollbar space */
+    background: transparent;
+    /* optional: just make scrollbar invisible */
+}
+
+.watched-movie-card {
+    margin-top: 2vw;
+    margin-left: 2vw;
+    background-size: cover;
+    width: 200px;
+    height: 300px;
+    background-repeat: no-repeat;
+    /* border: 1px solid #FF9900; */
+    padding: 0;
+    display: -webkit-inline-box;
+    border-radius: 4px;
+    /* border-top-left-radius: 10px; */
+    /* border-top-right-radius: 10px; */
+}
+
+.back {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    /* background: chartreuse; */
+    margin-top: 2vw;
+    margin-left: -1vw;
+}
+
 .crop-container {
     margin: auto;
-    background-color: red;
-    height: 500px;
+    background-color: #E88C00;
+    height: 500px !important;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -45,6 +83,12 @@ body i {
 .middle-card {
     background-color: black;
     box-shadow: inset 0 0 10px #ff9900;
+}
+
+.the-movies {
+    overflow-y: scroll;
+    display: inline-block;
+    background-color: #E88C00 !important;
 }
 
 .card {
@@ -125,6 +169,7 @@ body i {
 }
 
 .my-5 {
+    height: 700px;
     margin-top: 0rem !important;
 }
 
@@ -141,7 +186,12 @@ body i {
 }
 
 .card-signin {
-    border: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.card-header {
+    background-color: #ff9900;
 }
 
 .card-signin .card-title {
