--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top" alt=""></a>
+		<a class="navbar-brand" href="/user/profile"><img {{#if pic}} src="{{pic}}" {{else}} src="/images/avatar.png" {{/if}} width="40" height="40" class="d-inline-block align-top" alt=""></a>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
@@ -17,7 +17,7 @@
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="/profile/update">settings<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/user/profile">settings<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<ul class="navbar-nav">
@@ -93,7 +93,7 @@
 				console.log(res);
 
 				$('.box').css({
-//					'background-image': 'url("https://image.tmdb.org/t/p/w500' + res.backdrop_path + '")'
+					//					'background-image': 'url("https://image.tmdb.org/t/p/w500' + res.backdrop_path + '")'
 					'background-image': 'url("https://image.tmdb.org/t/p/w1280' + res.backdrop_path + '")'
 				})
 				$('.movie-desc').css({
