--- a/templates/emails/html.hbs
+++ b/templates/emails/html.hbs
@@ -311,7 +311,7 @@
 						<tbody>
 							<tr>
 								<td class="padded">
-									<img src="" alt="" width="200" height="200">
+									<img src="https://i.ibb.co/X30DZzk/logo.png" alt="" width="200" height="200">
 									<h1>Reset Password</h1>
 									<p style="text-align:center;"><a href="{{link}}" class="btn">Reset</a></p>
 									<p style="text-align:center;">
@@ -354,7 +354,7 @@
 				</td>
 				<td class="subscription" width="300">
 					<div class="logo-image">
-						<a href="https://zavoloklom.github.io/material-design-iconic-font/" target="_blank"><img src="https://zavoloklom.github.io/material-design-iconic-font/icons/mstile-70x70.png" alt="logo-alt" width="70" height="70"></a>
+						<a href="https://zavoloklom.github.io/material-design-iconic-font/" target="_blank"><img src="https://i.ibb.co/X30DZzk/logo.png" alt="logo-alt" width="70" height="70"></a>
 					</div>
 					<p>
 						<a class="strong block" href="#" target="_blank">
