--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -85,6 +85,7 @@
 						</div>
 
 						<!-- passwords -->
+						<meter max="5" id="strength" value="0"></meter>
 
 						<div class="input-group">
 							<span class="input-group-addon"><input type="checkbox" value="password"></span>
@@ -267,6 +268,11 @@
 			}
 			if (p1 && p1.length < 6)
 				tex += '- password too short<br>';
+			var level = sMeter(p1, '#strength');
+			if (p1 && level < 3)
+				tex += '- password too weak: you can do better<br>';
+			if (level == 3)
+				tex += '- password still weak<br>';
 			if (!(p1 == p2))
 				tex += '- passwords don\'t match<br>';
 			if (tex) {
