--- a/views/register.hbs
+++ b/views/register.hbs
@@ -35,6 +35,7 @@
 						<div class="form-label-group"> <input type="email" name="email" id="email" class="form-control" placeholder="email" {{#if mail}} autofocus {{/if}} {{#if email}} value="{{email}}" {{/if}}>
 							<label for="email">email</label>
 						</div>
+						<meter max="5" id="strength" value="0"></meter>
 						<div class="form-label-group">
 							<input name="password1" type="password" id="password1" class="form-control" placeholder="password">
 							<label for="password1">password</label>
