--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,4 +1,6 @@
-<title>yesus</title>
+{{#if title}}
+	<title>{{title}}</title>
+{{/if}}
 <link rel="stylesheet" href="/stylesheets/video.css">
 <link href="https://vjs.zencdn.net/7.3.0/video-js.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
