--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,6 +3,8 @@
 <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel="stylesheet" href="/stylesheets/home.css">
+
+{{!-- <img src="https://lh6.googleusercontent.com/-HqHY9fF8vkU/AAAAAAAAAAI/AAAAAAAAG0w/d9gECEX85PY/photo.jpg?sz=500" alt=""> --}}
 <div class="head">
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
