--- a/views/video.hbs
+++ b/views/video.hbs
@@ -36,6 +36,9 @@
 		<video poster="" id="videoPlayer" class="video-js vjs-default-skin vjs-fill" controls preload="metadata">
 			<source src="http://localhost:8080/video" type="video/mp4">
 			Your browser does not support the video tag.
+			{{#each subtitles}}
+				<track kind='captions' src='{{this.path}}' srclang='{{this.langShort}}' label='{{this.lang}}' />
+			{{/each}}
 		</video>
 	</div>
 	<br>
@@ -66,6 +69,9 @@
 </div>
 <div class="footer">
 	<p>Footer</p>
+	{{#each subtitles}}
+		<p>{{this.lang}}</p>
+	{{/each}}
 </div>
 
 <script>
