--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -2,6 +2,17 @@ body {
     background-color: black !important;
 }
 
+.drop-box {
+    display: none;
+    height : 0px;
+    transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+}
+
+.input-group {
+    border-radius: 0;
+}
+
 i {
     border: 1px solid #FF9900;
     border-width: 0 3px 3px 0;
@@ -208,7 +219,6 @@ h4 {
 .post .post-footer .comments-list .comment .comment-heading .time {
     font-size: 12px;
     color: #aaa;
-    margin-top: 0;
     display: inline;
 }
 
