--- a/views/video.hbs
+++ b/views/video.hbs
@@ -47,7 +47,7 @@
 		<p></p>
 
 		<div class="middle-card card text-center">
-			<button type="button" class="btn btn-primary btn-drop">Primary</button>
+			<button type="button" class="btn btn-primary btn-drop">More Info...</button>
 			<div class="drop-box">
 				<div class="card-header">
 					<ul class="nav nav-tabs card-header-tabs">
