--- a/views/video.hbs
+++ b/views/video.hbs
@@ -47,7 +47,7 @@
 		<p></p>
 
 		<div class="middle-card card text-center">
-			<button type="button" class="btn btn-primary btn-drop">More Info...</button>
+			<button type="button" class="btn-drop">More Info...</button>
 			<div class="drop-box">
 				<div class="card-header">
 					<ul class="nav nav-tabs card-header-tabs">
@@ -100,6 +100,7 @@
 	var i = 1;
 	var query;
 
+
 	window.onscroll = function () {
 		scrollFunction()
 	};
@@ -108,16 +109,19 @@
 		if (i) {
 			$('.drop-box').css({
 				'display': 'block',
-				'height': '700px'
+				'height': '700px',
 			})
 			i--;
 		} else {
 			$('.drop-box').css({
-				'height': '0px' ,
+				'height': '0px',
 				'display': 'none'
 			})
 			i++;
 		}
+		$('.drop-box').css({
+			'transition': 'all 0.8s'
+		})
 	})
 
 
@@ -150,7 +154,6 @@
 				$('.the-movies').css('display', 'block');
 			}
 		})
-
 		$('#myBtn').css({
 			'display': 'none',
 		});
