--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -4,11 +4,11 @@ body {
 
 .drop-box {
     display: none;
-    height : 0px;
+    height: 0px;
     transition: all 0.8s;
     -webkit-transition: all 0.8s;
-    border: 1px solid #FF9900 ;
-    background-color: #FF9900 ;
+    border: 1px solid #FF9900;
+    background-color: #FF9900;
     color: #454545;
 }
 
@@ -17,13 +17,46 @@ body {
 }
 
 .btn-drop {
-    border:0 !important;
+    border: 0 !important;
     background-color: #FF9900 !important;
     color: #454545;
 }
 
 .input-group {
     border-radius: 0;
+}
+
+.the-cast {
+    height: 84%;
+    width: 100%;
+    background-color: #E88C00 !important;
+    /* border: 0; */
+    overflow-y: scroll;
+    display: inline-block;
+}
+
+.cast-name {
+    position: absolute;
+    font-size: smaller;
+    line-height: 1.2;
+    width: 100%;
+    height: 10%;
+    /* background-color: #ff9900; */
+    bottom: 9px;
+}
+
+.cast-member {
+    position: relative;
+    margin: 1vw;
+    background-size: 100% 85%;
+    width: 170px;
+    height: 300px;
+    background-repeat: no-repeat;
+    /* border: 1px solid #FF9900; */
+    padding: 0;
+    background-color: white;
+    display: -webkit-inline-box;
+    border-radius: 4px;
 }
 
 i {
@@ -51,6 +84,7 @@ i:hover {
 }
 
 .back-to-top_1 {
+    height: 0;
     z-index: 3;
     position: fixed;
     top: 90vh;
