--- a/views/video.hbs
+++ b/views/video.hbs
@@ -7,8 +7,7 @@
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <script src="https://vjs.zencdn.net/7.3.0/video.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
- crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <!-- Font Awesome -->
 <!--- Include the above in your HEAD tag --->
 {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -18,12 +17,10 @@
 
 <div class="head">
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-		 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top"
-			 alt=""></a>
+		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top" alt=""></a>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
@@ -52,7 +49,7 @@
 				<div class="card-header">
 					<ul class="nav nav-tabs card-header-tabs">
 						<li class="watched nav-item nav-link active">
-							watched movies
+							movie cast
 						</li>
 						<li class="upadate-profile nav-item nav-link">
 							upadte profile
@@ -65,8 +62,8 @@
 
 				{{!-- containers related to cards --}}
 
-				<div class="card my-5">
-					sfssdd
+				<div class="card my-5 the-cast">
+
 				</div>
 			</div>
 		</div>
@@ -89,7 +86,7 @@
 	</div>
 </div>
 <div class="back-to-top_1 text-right" id="myBtn">
-	<a href="#" class="btn-block"><i class="arrow up"></i></a>
+	<a href="#" style="height:0" class="btn-block"><i class="arrow up"></i></a>
 </div>
 <div class="footer">
 	<p>Footer</p>
@@ -100,11 +97,11 @@
 	var i = 1;
 	var query;
 
-	window.onscroll = function () {
+	window.onscroll = function() {
 		scrollFunction()
 	};
 
-	$('.btn-drop').on('click', function () {
+	$('.btn-drop').on('click', function() {
 		if (i) {
 			$('.drop-box').css({
 				'display': 'block',
@@ -113,7 +110,7 @@
 			i--;
 		} else {
 			$('.drop-box').css({
-				'height': '0px' ,
+				'height': '0px',
 				'display': 'none'
 			})
 			i++;
@@ -132,14 +129,33 @@
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/comments/get_comments',
-			success: function (res) {
+			success: function(res) {
 				$('.com-boxes').html(res);
 			}
 		})
 	}
 
-	$('document').ready(function () {
-		$('.nav-item').on('click', function () {
+	$('document').ready(function() {
+
+		var encodedUrl = document.location.search.replace("info=", "");
+		var decodedUrl = Base64.decode(encodedUrl);
+		query = getQueryParams(decodedUrl);
+
+
+		var data = {};
+		data.id = query.mdbID;
+
+		$.ajax({
+			type: 'POST',
+			data: JSON.stringify(data),
+			contentType: 'application/json',
+			url: '/video/cast',
+			success: function(res) {
+				$('.the-cast').html(res);
+			}
+		});
+
+		$('.nav-item').on('click', function() {
 			$('.nav-item').removeClass('active');
 			$(this).addClass('active');
 			if ($(this).hasClass('upadate-profile')) {
@@ -154,10 +170,6 @@
 		$('#myBtn').css({
 			'display': 'none',
 		});
-		var encodedUrl = document.location.search.replace("info=", "");
-
-		var decodedUrl = Base64.decode(encodedUrl);
-		query = getQueryParams(decodedUrl);
 
 		getComments(query.title, query.year);
 		//console.log(query);
@@ -176,7 +188,7 @@
 		//		}
 	})
 
-	$('.comment-btn').on('click', function () {
+	$('.comment-btn').on('click', function() {
 
 		if ($('.comment').val() != '') {
 			var data = {};
@@ -188,7 +200,7 @@
 				data: JSON.stringify(data),
 				contentType: 'application/json',
 				url: '/comments',
-				success: function (res) {
+				success: function(res) {
 					//					$('.com-boxes').html(res);
 				}
 			})
@@ -204,5 +216,4 @@
 			document.getElementById("myBtn").style.display = "none";
 		}
 	}
-
 </script>
