--- a/public/stylesheets/user_profile.css
+++ b/public/stylesheets/user_profile.css
@@ -3,6 +3,7 @@ body {
 }
 
 * {
+    outline-color: transparent !important;
     font-family: Consolas !important;
     text-decoration: none !important;
     -webkit-transition: 300ms;
@@ -17,7 +18,6 @@ meter {
     position: relative;
     width: 100%;
     background: none;
-    background-color: rgba(255, 255, 255, 0.6);
     border: 1px solid black;
 }
 
@@ -86,6 +86,12 @@ meter[value="5"]::-webkit-meter-optimum-value {
 
 .back:hover {
     transform: scale(1.3);
+    cursor: pointer;
+}
+
+.navbar {
+    font-weight: bold;
+    background-color: #ff9900 !important;
 }
 
 .crop-container {
@@ -129,6 +135,14 @@ meter[value="5"]::-webkit-meter-optimum-value {
     overflow-y: scroll;
     display: inline-block;
     background-color: #E88C00 !important;
+}
+
+.nav-tabs .nav-link {
+    border: 1px solid #00000036;
+}
+
+.nav-tabs .nav-link {
+    cursor: pointer;
 }
 
 .card {
@@ -204,6 +218,18 @@ meter[value="5"]::-webkit-meter-optimum-value {
     background-color: #FFC773;
 }
 
+.input-group>.input-group-prepend>.input-group-text {
+    background-color: black !important;
+}
+
+input {
+    border: 0 !important;
+}
+
+.input-group>.input-group-prepend>.input-group-text {
+    border: 0 !important;
+}
+
 #submit {
     background-color: forestgreen;
 }
@@ -251,8 +277,12 @@ meter[value="5"]::-webkit-meter-optimum-value {
     background-color: #262626;
 }
 
+.card-body {
+    background-color: #FF9900 !important;
+}
+
 .card-signin .card-body {
-    background-color: #FF9900;
+    background-color: #FF9900 !important;
     padding: 2rem;
 }
 
@@ -277,4 +307,34 @@ meter[value="5"]::-webkit-meter-optimum-value {
 .input-group-addon {
     display: -webkit-inline-box;
     background-color: black;
+}
+
+@media screen and (max-width: 500px) {
+    .card-body {
+        padding: 0;
+    }
+
+    .watched-movie-card {
+        margin-left: 0;
+    }
+
+    .nav-tabs .nav-link {
+        font-size: xx-small;
+    }
+
+    #submit {
+        font-size: small;
+    }
+
+    #cancel {
+        font-size: small;
+    }
+
+    .input-group>.form-control {
+        font-size: small;
+    }
+
+    .card-title {
+        font-size: small;
+    }
 }
