--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -314,7 +314,7 @@ h4 {
 .navbar {
     color: gold;
     font-weight: bold;
-    background-color: #FF9900;
+    background-color: #FF9900 !important;
 }
 
 .navbar-toggleable-md .navbar-nav .nav-link {
@@ -339,10 +339,6 @@ h4 {
 
 .col-lg-4 {
     margin: auto;
-}
-
-.collapse {
-    background-color: #ff9900;
 }
 
 .main {
@@ -379,6 +375,10 @@ h4 {
     height: auto;
     width: 850px;
     margin: auto;
+}
+
+footer {
+    background-color: #ff9900;
 }
 
 @media screen and (max-width: 990px) {
