--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,35 +3,31 @@
 <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel="stylesheet" href="/stylesheets/home.css">
+{{!-- <script src="https://unpkg.com/tooltip.js/dist/tooltip.min.js"></script> --}}
 
-{{!-- <img src="https://lh6.googleusercontent.com/-HqHY9fF8vkU/AAAAAAAAAAI/AAAAAAAAG0w/d9gECEX85PY/photo.jpg?sz=500" alt=""> --}}
 <div class="head">
-	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-		 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+	<nav class="navbar navbar-expand-md navbar-light bg-light">
+		<a class="navbar-brand" href="/user/profile"><img {{#if pic}} src="{{pic}}" {{else}} src="/images/avatar.png" {{/if}} width="40" height="40" class="d-inline-block align-top" alt=""></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="/user/profile"><img {{#if pic}} src="{{pic}}" {{else}} src="/images/avatar.png" {{/if}}
-			 width="40" height="40" class="d-inline-block align-top" alt=""></a>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
+
+		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item active" data-toggle="tooltip" title="logout">
+					<a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a>
 				</li>
-			</ul>
-			<ul class="navbar-nav">
 				<li class="nav-item active">
 					<a class="nav-link" href="/user/profile">settings<span class="sr-only">(current)</span></a>
 				</li>
-			</ul>
-			<ul class="navbar-nav">
 				<li class="nav-item active">
 					<img src="/images/search.svg" id="search_btn">
 				</li>
 			</ul>
 		</div>
-		{{!-- <div class="profile_icon"></div> --}}
 	</nav>
+
 	<div class="container">
 		{{#if success_msg}}
 			<div id="errors" class="alert alert-success text-center" role="alert">{{success_msg}}</div>
@@ -48,18 +44,21 @@
 			</div>
 		</form>
 	</div>
-</div>
 
-<div class="dropdown_1">
-	<button class="btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		Sort By <div class="arrow-down"></div>
-	</button>
-	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-		<div class="dropdown-item" value="date">Release Date</div>
-		<div class="dropdown-item" value="title">Title</div>
-		<div class="dropdown-item" value="vote-average">Rating</div>
+	<div class="btn-group d-flex justify-content-center">
+		<button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Sort By
+		</button>
+		<div class="dropdown-menu">
+			<div class="dropdown-item" value="date">Release Date</div>
+			<div class="dropdown-item" value="title">Title</div>
+			<div class="dropdown-item" value="vote-average">Rating</div>
+		</div>
 	</div>
 </div>
+
+
+
 <div class="containers">
 	<div class="gala">
 	</div>
@@ -80,49 +79,61 @@
 		<p class="overview"></p>
 	</div>
 </div>
-<footer class="text-white mt-4">
-    <div class="container-fluid py-3">
-        <div class="row">
-            <div class="col-md-3">
-                <h5>Footer</h5></div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">I stay at the bottom of the viewport! <span class="small"><br>Unless the page content pushes me further.</span></div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3 text-right small align-self-end">©2017 Brand, Inc.</div>
-        </div>
-    </div>
+
+<nav aria-label="Page navigation example" class="pagi d-none">
+	<ul class="pagination justify-content-center">
+		<li class="page-item" value="prev">
+			<a class="page-link" tabindex="-1">Prev</a>
+		</li>
+		<li class="page-item" value="next">
+			<a class="page-link">Next</a>
+		</li>
+	</ul>
+</nav>
+
+<footer class="text-white mt-4 d-none">
+	<div class="container-fluid py-3">
+		<div class="row">
+			<div class="col-md-3">
+				<h5></h5>
+			</div>
+			<div class="col-md-3"></div>
+			<div class="col-md-3"></div>
+			<div class="col-md-3"></div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">stuff<span class="small"><br>- Gareth Lategan <br>- Roelf Diedericks <br>- Roger Ndaba </span></div>
+			<div class="col-md-3">cxx</div>
+			<div class="col-md-3 text-right small align-self-end">©2018</div>
+		</div>
+	</div>
 </footer>
 <script>
 	var i = 0;
 
-	function makeMovieCall(filter = 'none') {
+	function makeMovieCall(filter = 'none', page = '1') {
 		var data = {};
 
 		data.filter = filter;
+		data.page = page;
 		$.ajax({
 			type: 'POST',
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/movie/default',
-			success: function (res) {
+			success: function(res) {
+				window.location.href = "#";
+				$('footer').removeClass('d-none');
+				$('.pagi').removeClass('d-none');
 				$('.gala').html(res);
 			}
 		});
 	}
 
-	$('.dropdown-item').on('click', function() {
-			makeMovieCall(''+ $(this).attr('value'));
-	})
-
 
 	function func(e) {
 		var year = $(e).find($('.year')).html(),
 			title = $(e).find($('.movie-title')).html();
-		console.log('------> ' + title);
 		var data = {};
 		data.title = title;
 
@@ -131,8 +142,7 @@
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/movie/info',
-			success: function (res) {
-				console.log(res);
+			success: function(res) {
 
 				$('.box').css({
 					//					'background-image': 'url("https://image.tmdb.org/t/p/w500' + res.backdrop_path + '")'
@@ -177,9 +187,36 @@
 		});
 	}
 
-	$('document').ready(function () {
+	$('document').ready(function() {
+		// 
+		// $(function() {
+		// 	$('[data-toggle="tooltip"]').each(function() {
+		// 		new Tooltip($(this), {
+		// 			placement: 'top',
+		// 		});
+		// 	})
+		// })
 
-		setInterval(function () {
+		var page = 1;
+
+		$('.page-item').on('click', function() {
+
+			if ($(this).attr('value') == "prev" && page > 1) {
+				page -= 1;
+				makeMovieCall('none', '' + page);
+			} else if ($(this).attr('value') == "next") {
+				page += 1;
+				makeMovieCall('none', '' + page);
+			}
+		})
+
+		$('.dropdown-item').on('click', function() {
+			makeMovieCall('' + $(this).attr('value'), '' + page);
+		})
+
+
+
+		setInterval(function() {
 			$('.alert').fadeOut();
 		}, 1000);
 
@@ -193,7 +230,7 @@
 			'height': '0px',
 		});
 
-		$('#cancel').on('click', function () {
+		$('#cancel').on('click', function() {
 			$('.movie-desc').css({
 				'display': 'none',
 			});
@@ -209,7 +246,7 @@
 			});
 		})
 
-		$('#search_btn').on('click', function () {
+		$('#search_btn').on('click', function() {
 			if (i == 0) {
 				$('#search_form').css({
 					'display': 'block',
@@ -229,7 +266,7 @@
 			}
 		});
 
-		document.getElementById("search").addEventListener("input", function () {
+		document.getElementById("search").addEventListener("input", function() {
 			if ($('#search').val() === '') {
 				makeMovieCall();
 			} else {
@@ -240,7 +277,7 @@
 					data: JSON.stringify(data),
 					contentType: 'application/json',
 					url: '/movie/search',
-					success: function (res) {
+					success: function(res) {
 						console.log(res);
 						$('.gala').html(res);
 					}
@@ -248,5 +285,4 @@
 			}
 		});
 	});
-
 </script>
