--- a/views/home.hbs
+++ b/views/home.hbs
@@ -243,6 +243,10 @@
 				'width': '0',
 				'height': '0'
 			});
+			$('#search_form').css({
+					'display': 'block',
+					'transition': '600ms',
+				});
 		})
 
 		$('#search_btn').on('click', function() {
@@ -275,7 +279,6 @@
 				$('.btn-group>.btn:first-child').css ({
 					'display': 'block',
 				})
-
 				i = 0;
 			}
 		});
