--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,10 @@
     .navbar-toggleable-sm {
         clear: both;
     }
+
+    .btn {
+        font-size: 5vw !important;
+    }
 }
 
 body {
@@ -20,14 +24,21 @@ body {
     font-family: Consolas !important;
 }
 
+body i {
+    font-family: 'Font Awesome 5 Free' !important;
+}
+
+.navbar {
+    background-color: #ff9900;
+}
+
 .navbar-toggleable-md .navbar-nav .nav-link {
     padding-left: 1.5rem;
 }
 
 .navbar {
-    color: gold;
     font-weight: bold;
-    background-color: #FF9900;
+    background-color: #FF9900 !important;
 }
 
 .btn {
@@ -36,7 +47,7 @@ body {
     color: #ff9900;
     border-color: #ff9900;
     font-size: 2vw;
-    display: blok;
+    display: block;
     transform: translate(-50%, -50%);
     left: 50%;
 }
@@ -45,10 +56,6 @@ body {
     border-color: #ff9900;
     background-color: #ff9900;
     color: black;
-}
-
-.collapse {
-    background-color: #ff9900;
 }
 
 .hub {
@@ -70,4 +77,42 @@ body {
     border-radius: 1vw;
     padding: 0 1vw 1vw 1vw;
     display: inline-block;
+}
+
+.fa, .fas {
+    font-size: 25px;
+}
+
+.nav-item .tooltiptext {
+    visibility: hidden;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+}
+
+.nav-item:hover .tooltiptext {
+    visibility: visible;
+}
+
+.speech-bubble {
+    position: relative;
+    background: #000000;
+    border-radius: .4em;
+    font-size: small;
+    padding: 5px;
+}
+
+.speech-bubble:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 14%;
+    width: 0;
+    height: 0;
+    border: 0.5em solid transparent;
+    border-bottom-color: #000000;
+    border-top: 0;
+    margin-left: -0.25em;
+    margin-top: -0.437em;
 }
