--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -12,7 +12,10 @@
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item active">
-					<a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a>
+					<span class="tooltiptext">
+						<div class="speech-bubble">Logout</div>
+					</span>
 				</li>
 			</ul>
 		</div>
