--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,6 +2,17 @@
 <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel="stylesheet" href="/stylesheets/home.css">
+
+<div class="loader">
+	<div class="load-spin">
+
+		<div class="fa-3x">
+			<i class="fas fa-spinner fa-spin"></i>
+		</div>
+
+	</div>
+</div>
+
 <div class="head">
 
 	<nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -192,6 +203,31 @@
 			}
 		});
 	}
+
+	function disable() {
+		$(window).on('wheel.impair', function() {
+			return false;
+		});
+	}
+
+	function enable() {
+		$(window).off('wheel.impair');
+	}
+
+	$(document).ajaxStart(function() {
+		$('.loader').css({
+			'display': 'block'
+		})
+		disable();
+		console.log('loading...');
+	}).ajaxStop(function() {
+		$('.loader').css({
+			'display': 'none'
+		})
+		enable();
+		console.log('stop');
+	});
+
 
 	$('document').ready(function() {
 
