--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,6 +2,32 @@ body {
     background-color: black;
 }
 
+.loader {
+    display: none;
+    position: fixed;
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    background-color: #252422ab;
+}
+
+.load-spin {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    /* background-color: red; */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.fas, .fa-spinner, .fa-spin {
+    color: #ff9900;
+    font-size: 100% !important;
+}
+
 .page-link:hover {
     cursor: pointer;
 }
